it is finished, only deploy left